--- a/views/base.html
+++ b/views/base.html
@@ -20,7 +20,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container">
         <a class="navbar-brand" href="#">MagicPing</a>
         <button
@@ -35,21 +35,25 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse mx-lg-0" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav w-100">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/app/"
+              <a
+                class="nav-link active border-bottom text-white"
+                aria-current="page"
+                href="/app/"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/app/channels/">Channels</a>
+              <a class="nav-link text-white" href="/app/channels/">Channels</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/app/users/">Users</a>
+              <a class="nav-link text-white" href="/app/users/">Users</a>
             </li>
-            <li class="nav-item dropdown">
+
+            <li class="nav-item dropdown ms-auto">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link text-white dropdown-toggle"
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
@@ -58,19 +62,20 @@
               >
                 <i class="fa-solid fa-gear"></i>
               </a>
+
               <ul
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
                   <a class="dropdown-item" href="/app/login-users/"
-                    ><i class="fa-solid fa-users"></i> Login Users</a
+                    ><i class="fa-solid fa-users me-2"></i> Login Users</a
                   >
                 </li>
                 <li>
                   <a class="dropdown-item" href="/auth/logout/"
-                    ><i class="fa-solid fa-arrow-right-from-bracket"></i>Log
-                    Out</a
+                    ><i class="fa-solid fa-arrow-right-from-bracket me-2"></i
+                    >Log Out</a
                   >
                 </li>
               </ul>
@@ -80,8 +85,8 @@
       </div>
     </nav>
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-auto">{% block content %}{% endblock %}</div>
+      <div class="row justify-content-center mt-5">
+        <div class="col-lg-8">{% block content %}{% endblock %}</div>
       </div>
     </div>
     <script
