--- a/views/channels/list.html
+++ b/views/channels/list.html
@@ -1,28 +1,37 @@
 {% extends 'base.html' %} {% block content %}
-
-<a href="/app/channels/new/">New</a>
-<label for="">Channels:</label>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Name</th>
-      <th scope="col">public</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for channel in channels %}
-    <tr>
-      <th scope="row">{{ loop.index }}</th>
-      <td>
-        {% if channel.is_public %}{{ channel.channel_name }}{% else %}<a
-          href="/app/channel/{{ channel.id }}"
-          >{{ channel.channel_name }}</a
-        >{% endif %}
-      </td>
-      <td>{{ channel.is_public }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-{% endblock %}
+<div class="card">
+  <div class="card-body p-4">
+    <h5 class="card-title mb-4">Channels <a href="/app/channels/new/" class="float-end fs-6">New</a></h5>
+        <div class="table-responsive">
+             <table class="table   table-hover">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Users</th>
+        <th scope="col">public</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for channel in channels %}
+      <tr>
+        <th scope="row">{{ loop.index }}</th>
+        <td>
+          {% if channel.is_public %}{{ channel.name }}{% else %}<a
+            href="/app/channel/{{ channel.id }}"
+            >{{ channel.name }}</a
+          >{% endif %}
+        </td>
+        <td>{{ channel.users }}</td>
+        <td>{{ channel.is_public }}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+            </div>
+    </div>
+  </div>
+  
+ 
+  {% endblock %}
+</div>
