--- a/views/channels/new.html
+++ b/views/channels/new.html
@@ -1,21 +1,32 @@
 {% extends 'base.html' %} {% block content %}
+<div class="card rounded-3 shadow">
+  <div class="card-body p-5">
+    <h5 class="card-title mb-4">New Channel</h5>
+    <form class="row" action="." method="post">
+      <div class="mb-3">
+        <label for="">Name</label>
+        <input type="text" class="form-control" name="channel_name" id="" />
+      </div>
+      <div class="mb-3">
+        <label for="">Private?</label>
+        <div class="form-check form-switch">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            role="switch"
+            id="flexSwitchCheckDefault"
+            name="is_private"
+          />
+          <label class="form-check-label" for="flexSwitchCheckDefault"></label>
+        </div>
+      </div>
+      <div class="col-12">
+        <button type="submit" class="btn btn-primary">Create</button>
 
-<form class="row border rounded-3" action="." method="post">
-  <legend>New Channel</legend>
-  <div class="mb-3">
-    <label for="">name</label>
-    <input type="text" class="form-control" name="channel_name" id="" />
+        <a href="#" class="btn btn-secondary float-end">Cancel</a>
+      </div>
+    </form>
   </div>
-  <div class="mb-3">
-    <label for="">Private?</label>
-    <select name="is_public" class="form-control" id="">
-      <option value="yes">Yes</option>
-      <option value="no" selected>No</option>
-    </select>
-  </div>
-  <div class="col-12">
-    <button type="submit" class="btn btn-primary">Create</button>
-  </div>
-</form>
+</div>
 
 {% endblock %}
