--- a/views/demo.html
+++ b/views/demo.html
@@ -15,18 +15,16 @@
     ></script>
     <script>
       // Change the connection to the host that is running this code
-      const socket = io('http://localhost:9060/');
+      const socket = io();
 
       console.log('data');
-      socket.emit('join', 'c1');
+      socket.emit('join', 'c3');
 
       socket.on('connect', () => {
         console.log(socket.id); // x8WIv7-mJelg7on_ALbx
       });
 
-      socket.emit('c1', 'f1');
       socket.on('purchase', (data) => {
-        console.log('data1');
         console.log(data);
       });
       socket.on('connect_error', (err) => {
